--- a/app.json
+++ b/app.json
@@ -25,8 +25,8 @@
       "required": false
     }
     "CHANNEL": {
-      "description": "telegram channels without @",
-      "value": "RendyProjects",
+      "description": "telegram channels use @",
+      "value": "@RendyProjects",
       "required": false
     }
     "MONGO_URL": {
