--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ pymongo
 pymediainfo
 prettytable
 git+https://github.com/Itz-fork/py-trans.git
+speedtest-cli==2.1.3
 reportlab
 svglib
 tgcrypto 
